# Crayonizer

./: .README.swp  Alternatives  CHANGELOG  IMPORTANT_CHANGES  Makefile  Makefile.in  README  README.md  command_line.c  command_line.h  common.c  common.h  config.status  config_file.c  config_file.h  configure  configure.ac  configure.in  crayonizations.c  crayonizations.h  crayonizer.conf  escape_sequences.c  escape_sequences.h  help.c  help.h  history.c  history.h  keypress.c  keypress.h  main.c  signals.c  signals.h  status_bar.c  status_bar.h  text_substitutions.c  text_substitutions.h  timers.c  timers.h  xterm.c  xterm.h
autom4te.cache/: output.0  requests  traces.0
docs/: term-function-keys.html
examples/: crayonizer.conf  make.conf  mplayer.conf  nmap.conf  sftp.conf  ssh.conf  tcpdump.conf  terminal.conf
libUseful/: Http.c  Makefile  OAuth.c  PatternMatch.c  Stream.c  String.c  Terminal.c  Terminal.h  Tokenizer.c  config.status  configure  configure.ac  ptest  ptest.c
libUseful-2.0/: SpawnPrograms.c  Time.c  config.status  file.c  http.c  list.h  pty.c  string.c
libUseful-2.0/autom4te.cache/: output.0
libUseful-2.6/: ConnectionChain.c  Makefile  Makefile.in  PatternMatch.c  SpawnPrograms.c  Tokenizer.c  config.status  file.c
libUseful-bundled/: CHANGELOG  Container.c  Makefile  config.status  configure.ac
libUseful-bundled/autom4te.cache/: output.0  requests  traces.0
libUseful/autom4te.cache/: output.0  requests  traces.0
